--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,32 @@
 
+logging.level.org.springframework=info
 server.port=9000
+
+# this line is used to enable all actuator endpoints
+# because by default only: /actuator/health and /actuator/info  are available
+#management.endpoints.web.exposure.include=*
+
+# used to enable spring boot h2 database console
+#access the h2 db on http://localhost:8080/h2-console
+spring.h2.console.enabled = true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.jpa.defer-datasource-initialization=true
+
+#spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+# To setup spring security username and password we do as follows:
+#spring.security.user.name=Daniel
+#spring.security.user.password=Daniel
+
